"agressive roaming", when num_seen_bssids > 1 does not seem to work, bgscan is still default
Issue #248 (closed) requested faster roaming, i.e. different bgscan settings.
In trying to reproduce, it looks like this is without effect. bgscan is still set to the default "simple:30:-70:86400"
@debiantest:~/$ nmcli con show _mynet | grep seen
802-11-wireless.seen-bssids: BC:05:43:XY:WZ:EA,BC:05:43:XY:WZ:EE
@debiantest:~/$ nmcli con up _mynet
Passwörter oder Schlüssel sind erforderlich, um auf das Funknetzwerk »_mynet« zuzugreifen.
Warnung: Das Passwort für »802-11-wireless-security.psk« ist nicht in »passwd-file« definiert. nmcli darf nicht ohne die Option »--ask« fragen.
Verbindung wurde erfolgreich aktiviert (aktiver D-Bus-Pfad: /org/freedesktop/NetworkManager/ActiveConnection/4)
@debiantest:~/$ sudo wpa_cli -p /run/wpa_supplicant -i wlo1 get_network 0 bgscan
"simple:30:-70:86400"
@debiantest:~/$ nmcli -v
nmcli-Werkzeug, Version 1.30.6