src/core/settings/nm-settings-connection.h
@@ -345,6 +345,8 @@ gboolean nm_settings_connection_has_seen_bssid(NMSettingsConnection *self, const
 
 void nm_settings_connection_add_seen_bssid(NMSettingsConnection *self, const char *seen_bssid);
 
+guint nm_settings_connection_get_num_seen_bssids(NMSettingsConnection *self);
+
 int  nm_settings_connection_autoconnect_retries_get(NMSettingsConnection *self);
 void nm_settings_connection_autoconnect_retries_set(NMSettingsConnection *self, int retries);
 void nm_settings_connection_autoconnect_retries_reset(NMSettingsConnection *self);
